fix: Flexbox ordering on IOS Device

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>
         <br>
         <br>
-        <p class="logo">Arfan Rafeek</p>
+        <div class="logo">Arfan Rafeek</div>
         <br>
         <br>
     </section>
