feat : Add Api for Quran Verse

--- a/index.html
+++ b/index.html
@@ -8,51 +8,101 @@
     <link href='https://fonts.googleapis.com/css?family=Libre Barcode 128 Text' rel='stylesheet'>
 </head>
 <body>
-    <div class="container">
-    <section id="verse" class="side-box box">
-        <br>
-        <a>Verse of the day</a>
-        <br>
-        <br>
-        <a>And seek help through patience and prayer, and indeed, it is difficult except for the humbly submissive [to Allah]"</a>
-        <p>Surah Al-Baqara, Ayat 45</p>
-        <br>
+    <section class="welcome-greet">
+    <h1 id="greeting"></h1>
+    <h2 class="today">Today is <span id="date"></span></h2>
+    </section>
+  <div class="container">
+    <section class="side-box box">
+        <h3>Verse of the day</h3>
+        <p id="verse"></p>
+        <p id="verse-no"></p>
     </section>
     <section id="links" class="box">
-        <br>
-        <br>
-        <br>
-        <a>This page is under construction. See you soon!</a>
-        <br>
-        <br>
-        <br>
-        <br>
         <h1>Quick Links</h1>
+        <a href="https://bank.barclays.co.uk/">Barclays Bank</a>
+        <a href="https://onlinebusiness.lloydsbank.co.uk/business/logon/login.jsp">Lloyds Bank</a>
+        <a href="https://login.xero.com/identity/user/login">Xero</a>        
         <a href="https://mail.google.com/">Gmail</a>
         <a href="https://mail.zoho.eu/">Zoho</a>
-        <a href="https://onlinebusiness.lloydsbank.co.uk/business/logon/login.jsp">Lloyds Bank</a>
-        <a href="https://bank.barclays.co.uk/">Barclays Bank</a>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="logo">Arfan Rafeek</div>
-        <br>
-        <br>
     </section>
     <section id="weather" class="side-box box">
-        <br>
-        <br>
-        <br>
-        <a>Weather forecast</a>
+        <h3>Weather forecast</h3>
         <br>
         <br>
         <br>
     </section>
-    </div>
-    <br>
+  </div>
 </body>
+
+<script>
+    const api = "https://cdn.jsdelivr.net/npm/quran-json@3.1.2/dist/quran_en.json";
+
+    const curatedList = [
+      "53:39","62:10","94:5","94:6","3:200","47:7","29:69","39:10","16:97","13:11",
+      "20:114","58:11","2:269","18:65","96:1","96:5","12:22","21:79","31:27","58:11",
+      "65:3","3:159","8:2","11:123","14:12","33:3","16:41","67:15","67:19","73:9",
+      "2:286","2:153","3:139","8:46","16:127","39:36","64:11","2:45","70:5","39:53",
+      "103:1","103:2","103:3","91:9","91:10","24:37","18:45","57:20","51:56","6:141",
+      "65:2","65:4","48:1","93:5","93:6","93:7","93:8","40:60","2:286","35:29"
+    ];
+
+    function getDailyIndex(max) {
+        const today = new Date();
+        const dayOfYear = Math.floor(
+            (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
+        );
+        return dayOfYear % max;
+    }
+
+    fetch(api)
+      .then(response => response.json())
+      .then(data => {
+        const index = getDailyIndex(curatedList.length);
+        const [surahId, ayahId] = curatedList[index].split(":").map(Number);
+
+        const surah = data.find(s => s.id === surahId);
+        if (!surah) throw new Error("Surah not found: " + surahId);
+
+        const ayah = surah.verses.find(v => v.id === ayahId);
+        if (!ayah) throw new Error(`Ayah not found: ${surahId}:${ayahId}`);
+
+        document.getElementById("verse").innerText = ayah.translation;
+        document.getElementById("verse-no").innerText =
+          `Surah ${surah.transliteration} (${surahId}:${ayah.id})`;
+      })
+      .catch(err => console.error("Error fetching Quran data:", err));
+
+    function welcomeGreet() {
+       let name = "Arfan";
+       let currentTime = new Date();
+       let hour = currentTime.getHours();
+       let greet;
+
+          if (hour < 6) {
+             greet = "Good night";
+           } else if (hour < 12) {
+             greet = "Good morning";
+           } else if (hour < 18) {
+             greet = "Good afternoon";
+           } else {
+             greet = "Good evening";
+           }
+
+      document.getElementById("greeting").innerHTML = `${greet}, ${name}`;
+    }
+
+    function showDate() {
+        let currentDate = new Date();
+        let day = currentDate.getDate();
+        let month = currentDate.toLocaleString("default", { month: "long" });
+        let weekday = currentDate.toLocaleString("default", { weekday: "long" });
+
+        let dateToday = `${day} ${month}, ${weekday}`;
+       document.getElementById("date").innerHTML = dateToday;
+    }
+   welcomeGreet();
+   showDate();
+  </script> 
 </html>
